fixes align-items and removes flex from school boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ div.content {
 
   flex-wrap: wrap;
 
-  align-items: flex-start;
+  align-items: center;
   align-content: center;
   justify-content: center;
 }
@@ -187,9 +187,6 @@ div#education > div.content {
 
 div.school {
   margin: 25px auto;
-  -webkit-box-flex: 2 auto;
-  -moz-box-flex:  2 auto;
-  flex: 2 auto;
 
   -webkit-box-ordinal-group: 2;
   -moz-box-ordinal-group: 2;
